# Nexus-Bank

./: .env.example  .env.production  .gitignore  DEPLOY.md  DEVELOPMENT_ROADMAP.md  DSA_ARCHITECTURE.md  Dockerfile  Dockerfile.frontend  Procfile  README.md  alembic.ini  create_admin.py  debug_login.py  debug_password.py  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  index.html  nexa_production_audit.md.resolved  nginx.conf  otp_body.json  package-lock.json  pyproject.toml  railway.json  render.yaml  requirements.txt  ruff.toml  test_login_flow.py
.github/workflows/: ci.yml
.postman/: resources.yaml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
bank_system/: README.md  main.py  requirements.txt  seed.py  test_api.py
bank_system/api/: deps.py
bank_system/core/: __init__.py  config.py  db.py  event_bus.py  exceptions.py  realtime.py  redis_client.py  redis_dsa.py  security.py  startup_checks.py
bank_system/data_structures/: __init__.py  bst.py  graph.py  hash_table.py  linked_list.py  priority_queue.py  queue.py  sorting.py  stack.py  (+1 more)
docs/: NEXA_Project_Report.md  NEXA_v4_Architecture_Upgrade.md  QA_STACK_DIAGNOSTIC_REPORT.md
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
k8s/: 00-namespace.yaml  01-postgres.yaml  02-redis.yaml  03-backend.yaml  04-frontend.yaml  05-ingress.yaml
nexus/: index.html  nexus-data.js  nexus-engine.js  nexus.css
nexus-app/: index.html  nexus-engine.js  nexus.css
scripts/: stack_health_check.ps1
tests/: conftest.py
(+151 files in other folders)
