# ============================================================
# Ruff Configuration (Python linter/formatter)
#
# This file configures Ruff only — it does NOT define a Poetry
# project. The [build-system] section tells Render/pip that this
# is NOT a Poetry project and should use pip + requirements.txt.
# ============================================================

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["bank_system"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",   # line too long — handled by formatter
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["bank_system"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
